Fix alignment

--- a/src/components/ComboSelector/style.less
+++ b/src/components/ComboSelector/style.less
@@ -52,12 +52,12 @@
       max-width: 400px;
 
       &.with-gradient {
-        padding-left: 270px;
-        margin-left: -167px;
+        padding-left: 275px;
+        margin-left: -187px;
         background: linear-gradient(
-          310deg,
-          rgba(255, 255, 255, 0.5) 78%,
-          rgba(0, 0, 0, 0) 78%
+          313deg,
+          rgba(255, 255, 255, 0.5) 76%,
+          rgba(0, 0, 0, 0) 76%
         );
       }
     }
