--- a/src/components/List/style.less
+++ b/src/components/List/style.less
@@ -15,7 +15,7 @@
   p {
     font-weight: 500;
     letter-spacing: 0.5px;
-    margin-top: 5px;
+    margin: 0 0 0 5px;
   }
 
   .elements {
